Flujo de guardado y aprobacion y delete de tablas